--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,15 +3,19 @@
 	"build": {
 		"dockerfile": "Dockerfile",
 		"args": {
-			"UBUNTU_VERSION": "22.04",
-			"CMAKE_VERSION": "3.27.7",
+			"UBUNTU_MAJOR_VERSION": "22",
+			"UBUNTU_MINOR_VERSION": "04",
+			"CMAKE_VERSION": "3.28.3",
 			"GCC_VERSION": "13",
 			"CLANG_VERSION": "17",
-			"MOLD_VERSION": "2.3.2",
-			"PY_MAJOR_VERSION": "3.12",
-			"PY_MINOR_VERSION": "0",
-			"VCPKG_VERSION": "2023.10.19",
-			"STDEXEC_VERSION": "nvhpc-23.09.rc4"
+			"MOLD_VERSION": "2.4.0",
+			"PYTHON_VERSION": "3.12.2",
+			"VCPKG_VERSION": "2024.02.14",
+			"STDEXEC_VERSION": "nvhpc-23.09.rc4",
+			"CUDA_VERSION": "12.3.2",
+			"BAZEL_VERSION": "6.5.0",
+			"NCCL_VERSION": "2.20.3",
+			"CUDNN_VERSION": "9.0.0"
 		}
 	},
 	"runArgs": [
@@ -19,7 +23,8 @@
 		"--security-opt",
 		"seccomp=unconfined",
 		// Needed for WSL performance.
-		"--dns=8.8.8.8"
+		"--dns=8.8.8.8",
+		"--gpus", "all"
 	],
 
 	// Configure tool-specific properties.
@@ -30,7 +35,11 @@
 			"extensions": [
 				"llvm-vs-code-extensions.vscode-clangd",
 				"ms-vscode.cmake-tools",
-				"ms-vscode.cpptools"
+				"ms-vscode.cpptools",
+				"BazelBuild.vscode-bazel",
+        "StackBuild.bazel-stack-vscode",
+        "StackBuild.bazel-stack-vscode-cc",
+				"ms-python.python"
 			]
 		}
 	},
@@ -42,5 +51,10 @@
 	"postCreateCommand": "dump_cpp_env.sh",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode"
+	"remoteUser": "vscode",
+
+	"mounts": [
+    "source=${localEnv:HOME}/.cache,target=/home/vscode/.cache,type=bind,consistency=cached"
+	]
+
 }
