--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "cmake.configureOnOpen": false,
     "C_Cpp.intelliSenseEngine": "disabled",
     "editor.tabSize": 2,
     "editor.insertSpaces": true,
